Bug 357239 - Decrease/Increase Thumbnail size Icons are misleading
Summary: Decrease/Increase Thumbnail size Icons are misleading
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-28 00:12 UTC by Andreas Schleth
Modified: 2019-01-04 17:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
lower right hand corner of KPA user interface (8.33 KB, image/png)
2015-12-28 00:14 UTC, Andreas Schleth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schleth 2015-12-28 00:12:56 UTC
In the lower right hand corner of the GUI are two sets of icons with (in my case) exactly the same image (will add screenshot).
* The upper two icons relate to shrinking/expanding the date bar.
* The two icons below have slightly larger button size but show the very same images as the icons above.  These two relate to shrinking/expanding the size of the stored thumbnails.

"Murphy was an Optimist":  When working with the date bar I hit the wrong icon set and - bam - my thumbnail cache was lost instantaneously.  This takes a long time to rebuild (on a i7 6700 machine).

a) these icons should not have the same imagery.
b) rebuilding the thumbnail cache is a very expensive operation, which should only be started when you REALLY want it.
c) as far as I see, the cache is deleted completely, but does not rebuild completely in one go.  It seems, only thumbnails for the most recent thumbnail view get rebuilt.

Reproducible: Always

Steps to Reproduce:
1. hit the wrong button (which has the same icon as the right one next to it)


Actual Results:  
2. loose your complete thumbnail cache

Expected Results:  
As this seems to be a new (I hope experimental :-) feature, I never expected anything like this from a simple miss-click.

At least: I need a dire warning (Do you really want to destroy ALL your thumbnails???) before the action becomes effective.

I understand the difficulty to present a sensible interface for thumbnail management.  Most people would not want to spend any unnecessary thought on this matter - this is a classical house keeping job.

Maybe a shortcut-button "Thumbnail Management" at the lower right hand corner would be OK.  This button could open the relevant (existing) settings dialog (as not to duplicate that).  Then, in the settings dialog, a similar method to size the thumbnails (optimum size for any integer number of images across the screen) could be presented.  
This, however, is dangerous, as not everybody will use KPA in full screen all the time.  Therefore, the integer-method should only be invoked in full screen mode. 

Then, to complete the job: the option to rebuild thumbnails (available in the maintenance menu as "Build Thumbnails") should be present in the settings dialog as well.
[NB: this option does not reuse existing thumbs - even if the size fits - but first deletes everything and the starts from scratch.]
Comment 1 Andreas Schleth 2015-12-28 00:14:33 UTC
Created attachment 96322 [details]
lower right hand corner of KPA user interface

there are two sets of buttons with the same icons...
Comment 2 Andreas Schleth 2015-12-28 00:15:06 UTC
Version v4.6.2-119-gec4650f
Using KDE Development Platform 4.14.10
Comment 3 Tobias Leupold 2015-12-28 06:35:57 UTC
Well, this was a bit tricky back then. The slider on the left adjusts the displayed thumbnail size without affecting the cached thumbnails. They are displayed scaled, both up- and downscaled. The two buttons on the right affect the actual thumbnails (so e. g. that no upscaling will be done but instead a new thumbnail calculation  if you want your thumbnails to be larger).

I even think we _had_ some warning about this at some time of the development (Johannes can/will tell you something about this I think).

Apart from this: you can decide if all thumbnails should be built at once or if they should be built "on demand", only when they are viewed (which is the far better way imho).

However, thanks for the food for thought! The GUI can surely be made better at many places.
Comment 4 Johannes Zarl-Zierl 2019-01-03 22:37:53 UTC
Git commit 899b0f643924aac62a49dd85e2f9aa1b3ef806b6 by Johannes Zarl-Zierl.
Committed on 03/01/2019 at 22:25.
Pushed by johanneszarl into branch 'master'.

Replace thumbnail storage size buttons with settings shortcut.

Reasons for the change:
 - Decrease clutter
 - Changing storage size is quite expensive and not done often

M  +8    -31   MainWindow/StatusBar.cpp
M  +2    -3    MainWindow/StatusBar.h
M  +5    -0    MainWindow/Window.cpp

https://commits.kde.org/kphotoalbum/899b0f643924aac62a49dd85e2f9aa1b3ef806b6
Comment 5 Andreas Schleth 2019-01-04 17:51:41 UTC
Thanks, Johannes. 
This is a nice surprise.