Replace thumbnail storage size buttons with settings shortcut.

Reasons for the change:
 - Decrease clutter
 - Changing storage size is quite expensive and not done often

BUG: 357239